[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enet-sys = "0.2.3"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "*"
rand = "*"
